--- a/index.html
+++ b/index.html
@@ -37,17 +37,10 @@
           </form>
           <span class="msgAddTask opacity">*Escriba una tarea</span>
         </div>
-        <ul class="cardsList" id="taskList">
-<!--           <li class="card">
-            <div>
-              <i class="far fa-check-square checkIcon icon"></i>
-              <span class="task">Hacer curso de DOM</span>
-            </div>
-            <i class="fas fa-trash-alt trashIcon icon"></i>
-          </li> -->
-        </ul>
+        <h3>Lista de tareas:</h3>
+        <ul class="cardsList" id="taskList"></ul>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
