--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <title>TODO App</title>
     <link rel="icon" type="image/png" href="./assets/rocket.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dosis&family=Open+Sans&family=Parisienne&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Open+Sans&family=Parisienne&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -23,24 +17,20 @@
         <div class="title"><img src="./assets/rocket.svg" /></div>
         <div>
           <form action="">
-              <input
-              type="text"
-              name="task"
-              placeholder="Nombre de la tarea"
-              class="inputForm"
-              id="inputTask"
-              autocomplete="off"
-              />
+            <input type="text" name="task" placeholder="Nombre de la tarea" class="inputForm" id="inputTask" autocomplete="off">
+            <input type="date" class="dateForm" id="dataTask" placeholder="dd/mm/aaaa">
             <button type="button" class="btnCreate" id="btnCreateTask">
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
-          <span class="msgAddTask opacity">*Escriba una tarea</span>
+          <span class="msgAddTask opacity"></span>
         </div>
         <h3>Lista de tareas:</h3>
         <ul class="cardsList" id="taskList"></ul>
       </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
