--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <div class="mainCard">
         <div class="title"><img src="./assets/rocket.svg" /></div>
-        <div>
+        <div class="div-form">
           <form action="">
             <input type="text" name="task" placeholder="Nombre de la tarea" class="inputForm" id="inputTask" autocomplete="off">
             <input type="date" class="dateForm" id="dataTask" placeholder="dd/mm/aaaa">
@@ -23,10 +23,15 @@
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
-          <span class="msgAddTask opacity"></span>
+          <span class="msgAddTask opacity">Mensaje</span>
         </div>
-        <h3>Lista de tareas:</h3>
+        <h3>Lista de tareas</h3>
         <ul class="cardsList" id="taskList"></ul>
+        <div class="reference">
+          <p class="green reference-text">Completada</p>
+          <p class="yellow reference-text">Para hoy</p>
+          <p class="red reference-text">Vencida</p>
+        </div>
       </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
