--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="cardsList" id="taskList"></ul>
         <div class="reference">
           <p class="green reference-text">Completada</p>
-          <p class="yellow reference-text">Para hoy</p>
+          <p class="yellow reference-text">Hoy</p>
           <p class="red reference-text">Vencida</p>
         </div>
       </div>
